rust/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CHAR
    COMMENT
    CRATE
    DOBLEQUOTE
    DYN
    ENUM
    EXTERN
    FOR
    IMPL
    IN
    MATCH
    MOD
    MOVE
    PUB
    QUOTE
    REF
    SELF
    STRING
    STRUCT
    SUPER
    TRAIT
    TYPE
    UNSAFE
    USE
    WHERE

Grammar

Rule 0     S' -> stmt
Rule 1     stmt -> decl_stmt
Rule 2     stmt -> expr_stmt
Rule 3     stmt -> SEMICOLON
Rule 4     decl_stmt -> item
Rule 5     decl_stmt -> let_decl
Rule 6     expr_stmt -> expr SEMICOLON
Rule 7     item -> fn_item
Rule 8     item -> const_item
Rule 9     item -> static_item
Rule 10    fn_item -> FN ID LPAREN RPAREN block_expr
Rule 11    const_item -> CONST ID COLON type ASSIGN expr SEMICOLON
Rule 12    static_item -> STATIC ID COLON type ASSIGN expr SEMICOLON
Rule 13    let_decl -> LET MUT ID COLON type init SEMICOLON
Rule 14    let_decl -> LET MUT ID COLON type SEMICOLON
Rule 15    let_decl -> LET MUT ID init SEMICOLON
Rule 16    let_decl -> LET MUT ID SEMICOLON
Rule 17    let_decl -> LET ID COLON type init SEMICOLON
Rule 18    let_decl -> LET ID COLON type SEMICOLON
Rule 19    let_decl -> LET ID init SEMICOLON
Rule 20    let_decl -> LET ID SEMICOLON
Rule 21    init -> ASSIGN expr
Rule 22    init -> expr
Rule 23    expr -> literal
Rule 24    expr -> block_expr
Rule 25    expr -> binop_expr
Rule 26    expr -> paren_expr
Rule 27    expr -> while_expr
Rule 28    expr -> loop_expr
Rule 29    expr -> break_expr
Rule 30    expr -> continue_expr
Rule 31    expr -> if_expr
Rule 32    expr -> return_expr
Rule 33    block_expr -> LBRACKET stmt expr RBRACKET
Rule 34    block_expr -> LBRACKET item expr RBRACKET
Rule 35    block_expr -> LBRACKET expr RBRACKET
Rule 36    binop_expr -> expr binop expr
Rule 37    binop_expr -> type_cast_expr
Rule 38    binop_expr -> assignment_expr
Rule 39    binop_expr -> compound_assignment_expr
Rule 40    paren_expr -> LPAREN expr RPAREN
Rule 41    while_expr -> WHILE no_struct_literal_expr block_expr
Rule 42    loop_expr -> LOOP block_expr
Rule 43    break_expr -> BREAK
Rule 44    continue_expr -> CONTINUE
Rule 45    if_expr -> IF no_struct_literal_expr block_expr
Rule 46    if_expr -> IF no_struct_literal_expr block_expr else_tail
Rule 47    else_tail -> ELSE if_expr
Rule 48    else_tail -> ELSE block_expr
Rule 49    return_expr -> RETURN
Rule 50    return_expr -> RETURN expr
Rule 51    no_struct_literal_expr -> literal
Rule 52    no_struct_literal_expr -> literal binop literal
Rule 53    no_struct_literal_expr -> literal binop literal binop literal
Rule 54    lit_suffix -> ID
Rule 55    literal -> num_lit
Rule 56    literal -> bool_lit
Rule 57    literal -> lit_suffix
Rule 58    num_lit -> INTEGER
Rule 59    num_lit -> FLOAT
Rule 60    bool_lit -> TRUE
Rule 61    bool_lit -> FALSE
Rule 62    binop -> arith_op
Rule 63    binop -> bitwise_op
Rule 64    binop -> comp_op
Rule 65    arith_op -> PLUS
Rule 66    arith_op -> MINUS
Rule 67    arith_op -> MULT
Rule 68    arith_op -> DIVIDE
Rule 69    arith_op -> REMINDER
Rule 70    bitwise_op -> AND
Rule 71    bitwise_op -> OR
Rule 72    bitwise_op -> XOR
Rule 73    comp_op -> EQUALS
Rule 74    comp_op -> NE
Rule 75    comp_op -> LT
Rule 76    comp_op -> GT
Rule 77    comp_op -> LE
Rule 78    comp_op -> GE
Rule 79    type_cast_expr -> ID AS type
Rule 80    assignment_expr -> expr ASSIGN expr
Rule 81    compound_assignment_expr -> expr arith_op ASSIGN expr
Rule 82    compound_assignment_expr -> expr bitwise_op ASSIGN expr
Rule 83    type -> SIGNINTTYPE
Rule 84    type -> UNSIGNINTTYPE
Rule 85    type -> FLOATTYPE
Rule 86    type -> BOOLTYPE
Rule 87    type -> CHARTYPE

Terminals, with rules where they appear

AND                  : 70
AS                   : 79
ASSIGN               : 11 12 21 80 81 82
BOOLTYPE             : 86
BREAK                : 43
CHAR                 : 
CHARTYPE             : 87
COLON                : 11 12 13 14 17 18
COMMENT              : 
CONST                : 11
CONTINUE             : 44
CRATE                : 
DIVIDE               : 68
DOBLEQUOTE           : 
DYN                  : 
ELSE                 : 47 48
ENUM                 : 
EQUALS               : 73
EXTERN               : 
FALSE                : 61
FLOAT                : 59
FLOATTYPE            : 85
FN                   : 10
FOR                  : 
GE                   : 78
GT                   : 76
ID                   : 10 11 12 13 14 15 16 17 18 19 20 54 79
IF                   : 45 46
IMPL                 : 
IN                   : 
INTEGER              : 58
LBRACKET             : 33 34 35
LE                   : 77
LET                  : 13 14 15 16 17 18 19 20
LOOP                 : 42
LPAREN               : 10 40
LT                   : 75
MATCH                : 
MINUS                : 66
MOD                  : 
MOVE                 : 
MULT                 : 67
MUT                  : 13 14 15 16
NE                   : 74
OR                   : 71
PLUS                 : 65
PUB                  : 
QUOTE                : 
RBRACKET             : 33 34 35
REF                  : 
REMINDER             : 69
RETURN               : 49 50
RPAREN               : 10 40
SELF                 : 
SEMICOLON            : 3 6 11 12 13 14 15 16 17 18 19 20
SIGNINTTYPE          : 83
STATIC               : 12
STRING               : 
STRUCT               : 
SUPER                : 
TRAIT                : 
TRUE                 : 60
TYPE                 : 
UNSAFE               : 
UNSIGNINTTYPE        : 84
USE                  : 
WHERE                : 
WHILE                : 41
XOR                  : 72
error                : 

Nonterminals, with rules where they appear

arith_op             : 62 81
assignment_expr      : 38
binop                : 36 52 53 53
binop_expr           : 25
bitwise_op           : 63 82
block_expr           : 10 24 41 42 45 46 48
bool_lit             : 56
break_expr           : 29
comp_op              : 64
compound_assignment_expr : 39
const_item           : 8
continue_expr        : 30
decl_stmt            : 1
else_tail            : 46
expr                 : 6 11 12 21 22 33 34 35 36 36 40 50 80 80 81 81 82 82
expr_stmt            : 2
fn_item              : 7
if_expr              : 31 47
init                 : 13 15 17 19
item                 : 4 34
let_decl             : 5
lit_suffix           : 57
literal              : 23 51 52 52 53 53 53
loop_expr            : 28
no_struct_literal_expr : 41 45 46
num_lit              : 55
paren_expr           : 26
return_expr          : 32
static_item          : 9
stmt                 : 33 0
type                 : 11 12 13 14 17 18 79
type_cast_expr       : 37
while_expr           : 27

Parsing method: LALR

state 0

    (0) S' -> . stmt
    (1) stmt -> . decl_stmt
    (2) stmt -> . expr_stmt
    (3) stmt -> . SEMICOLON
    (4) decl_stmt -> . item
    (5) decl_stmt -> . let_decl
    (6) expr_stmt -> . expr SEMICOLON
    (7) item -> . fn_item
    (8) item -> . const_item
    (9) item -> . static_item
    (13) let_decl -> . LET MUT ID COLON type init SEMICOLON
    (14) let_decl -> . LET MUT ID COLON type SEMICOLON
    (15) let_decl -> . LET MUT ID init SEMICOLON
    (16) let_decl -> . LET MUT ID SEMICOLON
    (17) let_decl -> . LET ID COLON type init SEMICOLON
    (18) let_decl -> . LET ID COLON type SEMICOLON
    (19) let_decl -> . LET ID init SEMICOLON
    (20) let_decl -> . LET ID SEMICOLON
    (23) expr -> . literal
    (24) expr -> . block_expr
    (25) expr -> . binop_expr
    (26) expr -> . paren_expr
    (27) expr -> . while_expr
    (28) expr -> . loop_expr
    (29) expr -> . break_expr
    (30) expr -> . continue_expr
    (31) expr -> . if_expr
    (32) expr -> . return_expr
    (10) fn_item -> . FN ID LPAREN RPAREN block_expr
    (11) const_item -> . CONST ID COLON type ASSIGN expr SEMICOLON
    (12) static_item -> . STATIC ID COLON type ASSIGN expr SEMICOLON
    (55) literal -> . num_lit
    (56) literal -> . bool_lit
    (57) literal -> . lit_suffix
    (33) block_expr -> . LBRACKET stmt expr RBRACKET
    (34) block_expr -> . LBRACKET item expr RBRACKET
    (35) block_expr -> . LBRACKET expr RBRACKET
    (36) binop_expr -> . expr binop expr
    (37) binop_expr -> . type_cast_expr
    (38) binop_expr -> . assignment_expr
    (39) binop_expr -> . compound_assignment_expr
    (40) paren_expr -> . LPAREN expr RPAREN
    (41) while_expr -> . WHILE no_struct_literal_expr block_expr
    (42) loop_expr -> . LOOP block_expr
    (43) break_expr -> . BREAK
    (44) continue_expr -> . CONTINUE
    (45) if_expr -> . IF no_struct_literal_expr block_expr
    (46) if_expr -> . IF no_struct_literal_expr block_expr else_tail
    (49) return_expr -> . RETURN
    (50) return_expr -> . RETURN expr
    (58) num_lit -> . INTEGER
    (59) num_lit -> . FLOAT
    (60) bool_lit -> . TRUE
    (61) bool_lit -> . FALSE
    (54) lit_suffix -> . ID
    (79) type_cast_expr -> . ID AS type
    (80) assignment_expr -> . expr ASSIGN expr
    (81) compound_assignment_expr -> . expr arith_op ASSIGN expr
    (82) compound_assignment_expr -> . expr bitwise_op ASSIGN expr

    SEMICOLON       shift and go to state 4
    LET             shift and go to state 11
    FN              shift and go to state 23
    CONST           shift and go to state 25
    STATIC          shift and go to state 26
    LBRACKET        shift and go to state 30
    LPAREN          shift and go to state 24
    WHILE           shift and go to state 34
    LOOP            shift and go to state 35
    BREAK           shift and go to state 36
    CONTINUE        shift and go to state 37
    IF              shift and go to state 38
    RETURN          shift and go to state 39
    INTEGER         shift and go to state 40
    FLOAT           shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    ID              shift and go to state 12

    stmt                           shift and go to state 1
    decl_stmt                      shift and go to state 2
    expr_stmt                      shift and go to state 3
    item                           shift and go to state 5
    let_decl                       shift and go to state 6
    expr                           shift and go to state 7
    fn_item                        shift and go to state 8
    const_item                     shift and go to state 9
    static_item                    shift and go to state 10
    literal                        shift and go to state 13
    block_expr                     shift and go to state 14
    binop_expr                     shift and go to state 15
    paren_expr                     shift and go to state 16
    while_expr                     shift and go to state 17
    loop_expr                      shift and go to state 18
    break_expr                     shift and go to state 19
    continue_expr                  shift and go to state 20
    if_expr                        shift and go to state 21
    return_expr                    shift and go to state 22
    num_lit                        shift and go to state 27
    bool_lit                       shift and go to state 28
    lit_suffix                     shift and go to state 29
    type_cast_expr                 shift and go to state 31
    assignment_expr                shift and go to state 32
    compound_assignment_expr       shift and go to state 33

state 1

    (0) S' -> stmt .



state 2

    (1) stmt -> decl_stmt .

    $end            reduce using rule 1 (stmt -> decl_stmt .)
    LBRACKET        reduce using rule 1 (stmt -> decl_stmt .)
    LPAREN          reduce using rule 1 (stmt -> decl_stmt .)
    WHILE           reduce using rule 1 (stmt -> decl_stmt .)
    LOOP            reduce using rule 1 (stmt -> decl_stmt .)
    BREAK           reduce using rule 1 (stmt -> decl_stmt .)
    CONTINUE        reduce using rule 1 (stmt -> decl_stmt .)
    IF              reduce using rule 1 (stmt -> decl_stmt .)
    RETURN          reduce using rule 1 (stmt -> decl_stmt .)
    INTEGER         reduce using rule 1 (stmt -> decl_stmt .)
    FLOAT           reduce using rule 1 (stmt -> decl_stmt .)
    TRUE            reduce using rule 1 (stmt -> decl_stmt .)
    FALSE           reduce using rule 1 (stmt -> decl_stmt .)
    ID              reduce using rule 1 (stmt -> decl_stmt .)


state 3

    (2) stmt -> expr_stmt .

    $end            reduce using rule 2 (stmt -> expr_stmt .)
    LBRACKET        reduce using rule 2 (stmt -> expr_stmt .)
    LPAREN          reduce using rule 2 (stmt -> expr_stmt .)
    WHILE           reduce using rule 2 (stmt -> expr_stmt .)
    LOOP            reduce using rule 2 (stmt -> expr_stmt .)
    BREAK           reduce using rule 2 (stmt -> expr_stmt .)
    CONTINUE        reduce using rule 2 (stmt -> expr_stmt .)
    IF              reduce using rule 2 (stmt -> expr_stmt .)
    RETURN          reduce using rule 2 (stmt -> expr_stmt .)
    INTEGER         reduce using rule 2 (stmt -> expr_stmt .)
    FLOAT           reduce using rule 2 (stmt -> expr_stmt .)
    TRUE            reduce using rule 2 (stmt -> expr_stmt .)
    FALSE           reduce using rule 2 (stmt -> expr_stmt .)
    ID              reduce using rule 2 (stmt -> expr_stmt .)


state 4

    (3) stmt -> SEMICOLON .

    $end            reduce using rule 3 (stmt -> SEMICOLON .)
    LBRACKET        reduce using rule 3 (stmt -> SEMICOLON .)
    LPAREN          reduce using rule 3 (stmt -> SEMICOLON .)
    WHILE           reduce using rule 3 (stmt -> SEMICOLON .)
    LOOP            reduce using rule 3 (stmt -> SEMICOLON .)
    BREAK           reduce using rule 3 (stmt -> SEMICOLON .)
    CONTINUE        reduce using rule 3 (stmt -> SEMICOLON .)
    IF              reduce using rule 3 (stmt -> SEMICOLON .)
    RETURN          reduce using rule 3 (stmt -> SEMICOLON .)
    INTEGER         reduce using rule 3 (stmt -> SEMICOLON .)
    FLOAT           reduce using rule 3 (stmt -> SEMICOLON .)
    TRUE            reduce using rule 3 (stmt -> SEMICOLON .)
    FALSE           reduce using rule 3 (stmt -> SEMICOLON .)
    ID              reduce using rule 3 (stmt -> SEMICOLON .)


state 5

    (4) decl_stmt -> item .

    $end            reduce using rule 4 (decl_stmt -> item .)


state 6

    (5) decl_stmt -> let_decl .

    $end            reduce using rule 5 (decl_stmt -> let_decl .)
    LBRACKET        reduce using rule 5 (decl_stmt -> let_decl .)
    LPAREN          reduce using rule 5 (decl_stmt -> let_decl .)
    WHILE           reduce using rule 5 (decl_stmt -> let_decl .)
    LOOP            reduce using rule 5 (decl_stmt -> let_decl .)
    BREAK           reduce using rule 5 (decl_stmt -> let_decl .)
    CONTINUE        reduce using rule 5 (decl_stmt -> let_decl .)
    IF              reduce using rule 5 (decl_stmt -> let_decl .)
    RETURN          reduce using rule 5 (decl_stmt -> let_decl .)
    INTEGER         reduce using rule 5 (decl_stmt -> let_decl .)
    FLOAT           reduce using rule 5 (decl_stmt -> let_decl .)
    TRUE            reduce using rule 5 (decl_stmt -> let_decl .)
    FALSE           reduce using rule 5 (decl_stmt -> let_decl .)
    ID              reduce using rule 5 (decl_stmt -> let_decl .)


state 7

    (6) expr_stmt -> expr . SEMICOLON
    (36) binop_expr -> expr . binop expr
    (80) assignment_expr -> expr . ASSIGN expr
    (81) compound_assignment_expr -> expr . arith_op ASSIGN expr
    (82) compound_assignment_expr -> expr . bitwise_op ASSIGN expr
    (62) binop -> . arith_op
    (63) binop -> . bitwise_op
    (64) binop -> . comp_op
    (65) arith_op -> . PLUS
    (66) arith_op -> . MINUS
    (67) arith_op -> . MULT
    (68) arith_op -> . DIVIDE
    (69) arith_op -> . REMINDER
    (70) bitwise_op -> . AND
    (71) bitwise_op -> . OR
    (72) bitwise_op -> . XOR
    (73) comp_op -> . EQUALS
    (74) comp_op -> . NE
    (75) comp_op -> . LT
    (76) comp_op -> . GT
    (77) comp_op -> . LE
    (78) comp_op -> . GE

    SEMICOLON       shift and go to state 44
    ASSIGN          shift and go to state 46
    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    MULT            shift and go to state 52
    DIVIDE          shift and go to state 53
    REMINDER        shift and go to state 54
    AND             shift and go to state 55
    OR              shift and go to state 56
    XOR             shift and go to state 57
    EQUALS          shift and go to state 58
    NE              shift and go to state 59
    LT              shift and go to state 60
    GT              shift and go to state 61
    LE              shift and go to state 62
    GE              shift and go to state 63

    binop                          shift and go to state 45
    arith_op                       shift and go to state 47
    bitwise_op                     shift and go to state 48
    comp_op                        shift and go to state 49

state 8

    (7) item -> fn_item .

    $end            reduce using rule 7 (item -> fn_item .)
    LBRACKET        reduce using rule 7 (item -> fn_item .)
    LPAREN          reduce using rule 7 (item -> fn_item .)
    WHILE           reduce using rule 7 (item -> fn_item .)
    LOOP            reduce using rule 7 (item -> fn_item .)
    BREAK           reduce using rule 7 (item -> fn_item .)
    CONTINUE        reduce using rule 7 (item -> fn_item .)
    IF              reduce using rule 7 (item -> fn_item .)
    RETURN          reduce using rule 7 (item -> fn_item .)
    INTEGER         reduce using rule 7 (item -> fn_item .)
    FLOAT           reduce using rule 7 (item -> fn_item .)
    TRUE            reduce using rule 7 (item -> fn_item .)
    FALSE           reduce using rule 7 (item -> fn_item .)
    ID              reduce using rule 7 (item -> fn_item .)


state 9

    (8) item -> const_item .

    $end            reduce using rule 8 (item -> const_item .)
    LBRACKET        reduce using rule 8 (item -> const_item .)
    LPAREN          reduce using rule 8 (item -> const_item .)
    WHILE           reduce using rule 8 (item -> const_item .)
    LOOP            reduce using rule 8 (item -> const_item .)
    BREAK           reduce using rule 8 (item -> const_item .)
    CONTINUE        reduce using rule 8 (item -> const_item .)
    IF              reduce using rule 8 (item -> const_item .)
    RETURN          reduce using rule 8 (item -> const_item .)
    INTEGER         reduce using rule 8 (item -> const_item .)
    FLOAT           reduce using rule 8 (item -> const_item .)
    TRUE            reduce using rule 8 (item -> const_item .)
    FALSE           reduce using rule 8 (item -> const_item .)
    ID              reduce using rule 8 (item -> const_item .)


state 10

    (9) item -> static_item .

    $end            reduce using rule 9 (item -> static_item .)
    LBRACKET        reduce using rule 9 (item -> static_item .)
    LPAREN          reduce using rule 9 (item -> static_item .)
    WHILE           reduce using rule 9 (item -> static_item .)
    LOOP            reduce using rule 9 (item -> static_item .)
    BREAK           reduce using rule 9 (item -> static_item .)
    CONTINUE        reduce using rule 9 (item -> static_item .)
    IF              reduce using rule 9 (item -> static_item .)
    RETURN          reduce using rule 9 (item -> static_item .)
    INTEGER         reduce using rule 9 (item -> static_item .)
    FLOAT           reduce using rule 9 (item -> static_item .)
    TRUE            reduce using rule 9 (item -> static_item .)
    FALSE           reduce using rule 9 (item -> static_item .)
    ID              reduce using rule 9 (item -> static_item .)


state 11

    (13) let_decl -> LET . MUT ID COLON type init SEMICOLON
    (14) let_decl -> LET . MUT ID COLON type SEMICOLON
    (15) let_decl -> LET . MUT ID init SEMICOLON
    (16) let_decl -> LET . MUT ID SEMICOLON
    (17) let_decl -> LET . ID COLON type init SEMICOLON
    (18) let_decl -> LET . ID COLON type SEMICOLON
    (19) let_decl -> LET . ID init SEMICOLON
    (20) let_decl -> LET . ID SEMICOLON

    MUT             shift and go to state 64
    ID              shift and go to state 65


state 12

    (54) lit_suffix -> ID .
    (79) type_cast_expr -> ID . AS type

    SEMICOLON       reduce using rule 54 (lit_suffix -> ID .)
    ASSIGN          reduce using rule 54 (lit_suffix -> ID .)
    PLUS            reduce using rule 54 (lit_suffix -> ID .)
    MINUS           reduce using rule 54 (lit_suffix -> ID .)
    MULT            reduce using rule 54 (lit_suffix -> ID .)
    DIVIDE          reduce using rule 54 (lit_suffix -> ID .)
    REMINDER        reduce using rule 54 (lit_suffix -> ID .)
    AND             reduce using rule 54 (lit_suffix -> ID .)
    OR              reduce using rule 54 (lit_suffix -> ID .)
    XOR             reduce using rule 54 (lit_suffix -> ID .)
    EQUALS          reduce using rule 54 (lit_suffix -> ID .)
    NE              reduce using rule 54 (lit_suffix -> ID .)
    LT              reduce using rule 54 (lit_suffix -> ID .)
    GT              reduce using rule 54 (lit_suffix -> ID .)
    LE              reduce using rule 54 (lit_suffix -> ID .)
    GE              reduce using rule 54 (lit_suffix -> ID .)
    RPAREN          reduce using rule 54 (lit_suffix -> ID .)
    RBRACKET        reduce using rule 54 (lit_suffix -> ID .)
    AS              shift and go to state 66


state 13

    (23) expr -> literal .

    SEMICOLON       reduce using rule 23 (expr -> literal .)
    ASSIGN          reduce using rule 23 (expr -> literal .)
    PLUS            reduce using rule 23 (expr -> literal .)
    MINUS           reduce using rule 23 (expr -> literal .)
    MULT            reduce using rule 23 (expr -> literal .)
    DIVIDE          reduce using rule 23 (expr -> literal .)
    REMINDER        reduce using rule 23 (expr -> literal .)
    AND             reduce using rule 23 (expr -> literal .)
    OR              reduce using rule 23 (expr -> literal .)
    XOR             reduce using rule 23 (expr -> literal .)
    EQUALS          reduce using rule 23 (expr -> literal .)
    NE              reduce using rule 23 (expr -> literal .)
    LT              reduce using rule 23 (expr -> literal .)
    GT              reduce using rule 23 (expr -> literal .)
    LE              reduce using rule 23 (expr -> literal .)
    GE              reduce using rule 23 (expr -> literal .)
    RPAREN          reduce using rule 23 (expr -> literal .)
    RBRACKET        reduce using rule 23 (expr -> literal .)


state 14

    (24) expr -> block_expr .

    SEMICOLON       reduce using rule 24 (expr -> block_expr .)
    ASSIGN          reduce using rule 24 (expr -> block_expr .)
    PLUS            reduce using rule 24 (expr -> block_expr .)
    MINUS           reduce using rule 24 (expr -> block_expr .)
    MULT            reduce using rule 24 (expr -> block_expr .)
    DIVIDE          reduce using rule 24 (expr -> block_expr .)
    REMINDER        reduce using rule 24 (expr -> block_expr .)
    AND             reduce using rule 24 (expr -> block_expr .)
    OR              reduce using rule 24 (expr -> block_expr .)
    XOR             reduce using rule 24 (expr -> block_expr .)
    EQUALS          reduce using rule 24 (expr -> block_expr .)
    NE              reduce using rule 24 (expr -> block_expr .)
    LT              reduce using rule 24 (expr -> block_expr .)
    GT              reduce using rule 24 (expr -> block_expr .)
    LE              reduce using rule 24 (expr -> block_expr .)
    GE              reduce using rule 24 (expr -> block_expr .)
    RPAREN          reduce using rule 24 (expr -> block_expr .)
    RBRACKET        reduce using rule 24 (expr -> block_expr .)


state 15

    (25) expr -> binop_expr .

    SEMICOLON       reduce using rule 25 (expr -> binop_expr .)
    ASSIGN          reduce using rule 25 (expr -> binop_expr .)
    PLUS            reduce using rule 25 (expr -> binop_expr .)
    MINUS           reduce using rule 25 (expr -> binop_expr .)
    MULT            reduce using rule 25 (expr -> binop_expr .)
    DIVIDE          reduce using rule 25 (expr -> binop_expr .)
    REMINDER        reduce using rule 25 (expr -> binop_expr .)
    AND             reduce using rule 25 (expr -> binop_expr .)
    OR              reduce using rule 25 (expr -> binop_expr .)
    XOR             reduce using rule 25 (expr -> binop_expr .)
    EQUALS          reduce using rule 25 (expr -> binop_expr .)
    NE              reduce using rule 25 (expr -> binop_expr .)
    LT              reduce using rule 25 (expr -> binop_expr .)
    GT              reduce using rule 25 (expr -> binop_expr .)
    LE              reduce using rule 25 (expr -> binop_expr .)
    GE              reduce using rule 25 (expr -> binop_expr .)
    RPAREN          reduce using rule 25 (expr -> binop_expr .)
    RBRACKET        reduce using rule 25 (expr -> binop_expr .)


state 16

    (26) expr -> paren_expr .

    SEMICOLON       reduce using rule 26 (expr -> paren_expr .)
    ASSIGN          reduce using rule 26 (expr -> paren_expr .)
    PLUS            reduce using rule 26 (expr -> paren_expr .)
    MINUS           reduce using rule 26 (expr -> paren_expr .)
    MULT            reduce using rule 26 (expr -> paren_expr .)
    DIVIDE          reduce using rule 26 (expr -> paren_expr .)
    REMINDER        reduce using rule 26 (expr -> paren_expr .)
    AND             reduce using rule 26 (expr -> paren_expr .)
    OR              reduce using rule 26 (expr -> paren_expr .)
    XOR             reduce using rule 26 (expr -> paren_expr .)
    EQUALS          reduce using rule 26 (expr -> paren_expr .)
    NE              reduce using rule 26 (expr -> paren_expr .)
    LT              reduce using rule 26 (expr -> paren_expr .)
    GT              reduce using rule 26 (expr -> paren_expr .)
    LE              reduce using rule 26 (expr -> paren_expr .)
    GE              reduce using rule 26 (expr -> paren_expr .)
    RPAREN          reduce using rule 26 (expr -> paren_expr .)
    RBRACKET        reduce using rule 26 (expr -> paren_expr .)


state 17

    (27) expr -> while_expr .

    SEMICOLON       reduce using rule 27 (expr -> while_expr .)
    ASSIGN          reduce using rule 27 (expr -> while_expr .)
    PLUS            reduce using rule 27 (expr -> while_expr .)
    MINUS           reduce using rule 27 (expr -> while_expr .)
    MULT            reduce using rule 27 (expr -> while_expr .)
    DIVIDE          reduce using rule 27 (expr -> while_expr .)
    REMINDER        reduce using rule 27 (expr -> while_expr .)
    AND             reduce using rule 27 (expr -> while_expr .)
    OR              reduce using rule 27 (expr -> while_expr .)
    XOR             reduce using rule 27 (expr -> while_expr .)
    EQUALS          reduce using rule 27 (expr -> while_expr .)
    NE              reduce using rule 27 (expr -> while_expr .)
    LT              reduce using rule 27 (expr -> while_expr .)
    GT              reduce using rule 27 (expr -> while_expr .)
    LE              reduce using rule 27 (expr -> while_expr .)
    GE              reduce using rule 27 (expr -> while_expr .)
    RPAREN          reduce using rule 27 (expr -> while_expr .)
    RBRACKET        reduce using rule 27 (expr -> while_expr .)


state 18

    (28) expr -> loop_expr .

    SEMICOLON       reduce using rule 28 (expr -> loop_expr .)
    ASSIGN          reduce using rule 28 (expr -> loop_expr .)
    PLUS            reduce using rule 28 (expr -> loop_expr .)
    MINUS           reduce using rule 28 (expr -> loop_expr .)
    MULT            reduce using rule 28 (expr -> loop_expr .)
    DIVIDE          reduce using rule 28 (expr -> loop_expr .)
    REMINDER        reduce using rule 28 (expr -> loop_expr .)
    AND             reduce using rule 28 (expr -> loop_expr .)
    OR              reduce using rule 28 (expr -> loop_expr .)
    XOR             reduce using rule 28 (expr -> loop_expr .)
    EQUALS          reduce using rule 28 (expr -> loop_expr .)
    NE              reduce using rule 28 (expr -> loop_expr .)
    LT              reduce using rule 28 (expr -> loop_expr .)
    GT              reduce using rule 28 (expr -> loop_expr .)
    LE              reduce using rule 28 (expr -> loop_expr .)
    GE              reduce using rule 28 (expr -> loop_expr .)
    RPAREN          reduce using rule 28 (expr -> loop_expr .)
    RBRACKET        reduce using rule 28 (expr -> loop_expr .)


state 19

    (29) expr -> break_expr .

    SEMICOLON       reduce using rule 29 (expr -> break_expr .)
    ASSIGN          reduce using rule 29 (expr -> break_expr .)
    PLUS            reduce using rule 29 (expr -> break_expr .)
    MINUS           reduce using rule 29 (expr -> break_expr .)
    MULT            reduce using rule 29 (expr -> break_expr .)
    DIVIDE          reduce using rule 29 (expr -> break_expr .)
    REMINDER        reduce using rule 29 (expr -> break_expr .)
    AND             reduce using rule 29 (expr -> break_expr .)
    OR              reduce using rule 29 (expr -> break_expr .)
    XOR             reduce using rule 29 (expr -> break_expr .)
    EQUALS          reduce using rule 29 (expr -> break_expr .)
    NE              reduce using rule 29 (expr -> break_expr .)
    LT              reduce using rule 29 (expr -> break_expr .)
    GT              reduce using rule 29 (expr -> break_expr .)
    LE              reduce using rule 29 (expr -> break_expr .)
    GE              reduce using rule 29 (expr -> break_expr .)
    RPAREN          reduce using rule 29 (expr -> break_expr .)
    RBRACKET        reduce using rule 29 (expr -> break_expr .)


state 20

    (30) expr -> continue_expr .

    SEMICOLON       reduce using rule 30 (expr -> continue_expr .)
    ASSIGN          reduce using rule 30 (expr -> continue_expr .)
    PLUS            reduce using rule 30 (expr -> continue_expr .)
    MINUS           reduce using rule 30 (expr -> continue_expr .)
    MULT            reduce using rule 30 (expr -> continue_expr .)
    DIVIDE          reduce using rule 30 (expr -> continue_expr .)
    REMINDER        reduce using rule 30 (expr -> continue_expr .)
    AND             reduce using rule 30 (expr -> continue_expr .)
    OR              reduce using rule 30 (expr -> continue_expr .)
    XOR             reduce using rule 30 (expr -> continue_expr .)
    EQUALS          reduce using rule 30 (expr -> continue_expr .)
    NE              reduce using rule 30 (expr -> continue_expr .)
    LT              reduce using rule 30 (expr -> continue_expr .)
    GT              reduce using rule 30 (expr -> continue_expr .)
    LE              reduce using rule 30 (expr -> continue_expr .)
    GE              reduce using rule 30 (expr -> continue_expr .)
    RPAREN          reduce using rule 30 (expr -> continue_expr .)
    RBRACKET        reduce using rule 30 (expr -> continue_expr .)


state 21

    (31) expr -> if_expr .

    SEMICOLON       reduce using rule 31 (expr -> if_expr .)
    ASSIGN          reduce using rule 31 (expr -> if_expr .)
    PLUS            reduce using rule 31 (expr -> if_expr .)
    MINUS           reduce using rule 31 (expr -> if_expr .)
    MULT            reduce using rule 31 (expr -> if_expr .)
    DIVIDE          reduce using rule 31 (expr -> if_expr .)
    REMINDER        reduce using rule 31 (expr -> if_expr .)
    AND             reduce using rule 31 (expr -> if_expr .)
    OR              reduce using rule 31 (expr -> if_expr .)
    XOR             reduce using rule 31 (expr -> if_expr .)
    EQUALS          reduce using rule 31 (expr -> if_expr .)
    NE              reduce using rule 31 (expr -> if_expr .)
    LT              reduce using rule 31 (expr -> if_expr .)
    GT              reduce using rule 31 (expr -> if_expr .)
    LE              reduce using rule 31 (expr -> if_expr .)
    GE              reduce using rule 31 (expr -> if_expr .)
    RPAREN          reduce using rule 31 (expr -> if_expr .)
    RBRACKET        reduce using rule 31 (expr -> if_expr .)


state 22

    (32) expr -> return_expr .

    SEMICOLON       reduce using rule 32 (expr -> return_expr .)
    ASSIGN          reduce using rule 32 (expr -> return_expr .)
    PLUS            reduce using rule 32 (expr -> return_expr .)
    MINUS           reduce using rule 32 (expr -> return_expr .)
    MULT            reduce using rule 32 (expr -> return_expr .)
    DIVIDE          reduce using rule 32 (expr -> return_expr .)
    REMINDER        reduce using rule 32 (expr -> return_expr .)
    AND             reduce using rule 32 (expr -> return_expr .)
    OR              reduce using rule 32 (expr -> return_expr .)
    XOR             reduce using rule 32 (expr -> return_expr .)
    EQUALS          reduce using rule 32 (expr -> return_expr .)
    NE              reduce using rule 32 (expr -> return_expr .)
    LT              reduce using rule 32 (expr -> return_expr .)
    GT              reduce using rule 32 (expr -> return_expr .)
    LE              reduce using rule 32 (expr -> return_expr .)
    GE              reduce using rule 32 (expr -> return_expr .)
    RPAREN          reduce using rule 32 (expr -> return_expr .)
    RBRACKET        reduce using rule 32 (expr -> return_expr .)


state 23

    (10) fn_item -> FN . ID LPAREN RPAREN block_expr

    ID              shift and go to state 67


state 24
